testData/diagnostics/invalid_float_3.diag.txt
testData/diagnostics/invalid_float_3.nut line = (1) column = (8) : error: malformed number
println(1.2.3.4)
        ^--

